fix alignment of items for mobile view

--- a/styles.css
+++ b/styles.css
@@ -35,19 +35,25 @@ p {
   font-weight: 600;
 }
 .circular-sb {
-  bottom: -6rem;
-  right: 3rem;
+  margin: 30px auto;
+  bottom: 50%;
+  margin-bottom: -100px;
+
+  right: 50%;
+  margin-right: -100px;
+
   width: 200px;
   height: 200px;
   border: 5px solid #7e8bff;
   background-color: #7e8bff;
   padding: 80px 0px;
-  margin: 30px auto;
+
   border-radius: 50%;
 }
 .get-in-touch .circular-sb {
-  bottom: -7rem;
-  right: -2rem;
+  right: 50%;
+  margin-right: -100px;
+  /* right: -2rem; */
 }
 
 @media (max-width: 768px) {
@@ -64,5 +70,15 @@ p {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+  }
+  .desc {
+    width: 80%;
+  }
+  .circular-sb {
+    bottom: 50%;
+    margin-bottom: -100px;
+
+    right: 50%;
+    margin-right: -100px;
   }
 }
